--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -15,3 +15,5 @@
 @using TheDiveLog.Shared.Models.DiveSiteTables
 @using TheDiveLog.Shared.Models.ImageTables
 @using TheDiveLog.Shared.Models.PADIDiveChartTables
+
+@using BlazorStrap
