--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,6 +1,9 @@
 ﻿@page "/"
 @inject IJSRuntime JsRuntime;
 
+@*<button @onclick="OpenModal">Open</button>
+<dialog @ref="_element">My modal</dialog>*@
+
 <div class="scrollable-area-index">
     <div class="row">
         <div class="col-sm-4">
@@ -15,45 +18,58 @@
                 </ul>
             </div>
         </div>
-        <div id="main" class="col-sm-4 carousel slide" data-ride="carousel">
-            <div id="slidshow"
-                 class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#slidshow" data-slide-to="0" class="active" />
-                    <li data-target="#slidshow" data-slide-to="1" />
-                    <li data-target="#slidshow" data-slide-to="2" />
-                    <li data-target="#slidshow" data-slide-to="3" />
-                    <li data-target="#slidshow" data-slide-to="4" />
-                </ol>
+        <div class="col-sm-4">
+            <BSCarousel NumberOfItems="@items.Count">
+                <BSCarouselIndicators NumberOfItems="@items.Count" />
                 <div class="carousel-inner">
-                    <div class="carousel-item  active">
-                        <img class="d-block w-100" src="css/Images/DSCN0030.JPG" alt="Pepa Pig">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="css/Images/DSCN0031.JPG" alt="Sponge Bob">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="css/Images/DSCN0032.JPG" alt="Sponge Bob">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="css/Images/DSCN0033.JPG" alt="Sponge Bob">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="css/Images/DSCN0068.JPG" alt="Sponge Bob">
-                    </div>
+                    @for (int i = 0; i < items.Count; i++)
+                    {
+                        <BSCarouselItem src="@items[i].Source" alt="@items[i].Alt" />
+                    }
                 </div>
-                <a id="slidshow-prev"
-                   class="carousel-control-prev" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a id="slidshow-next"
-                   class="carousel-control-next" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+                <BSCarouselControl CarouselDirection="CarouselDirection.Previous" NumberOfItems="@items.Count" />
+                <BSCarouselControl CarouselDirection="CarouselDirection.Next" NumberOfItems="@items.Count" />
+            </BSCarousel>
         </div>
+        @*<div id="main" class="col-sm-4 carousel slide" data-ride="carousel">
+                <div id="slidshow"
+                     class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#slidshow" data-slide-to="0" class="active" />
+                        <li data-target="#slidshow" data-slide-to="1" />
+                        <li data-target="#slidshow" data-slide-to="2" />
+                        <li data-target="#slidshow" data-slide-to="3" />
+                        <li data-target="#slidshow" data-slide-to="4" />
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item  active">
+                            <img class="d-block w-100" src="css/Images/DSCN0030.JPG" alt="Pepa Pig">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="css/Images/DSCN0031.JPG" alt="Sponge Bob">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="css/Images/DSCN0032.JPG" alt="Sponge Bob">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="css/Images/DSCN0033.JPG" alt="Sponge Bob">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="css/Images/DSCN0068.JPG" alt="Sponge Bob">
+                        </div>
+                    </div>
+                    <a id="slidshow-prev"
+                       class="carousel-control-prev" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a id="slidshow-next"
+                       class="carousel-control-next" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>*@
         <div class="col-sm-4">
             <div class="well well-sm text-blue">
                 <h4 class="alert-primary text-lg-center">Getting started</h4>
@@ -114,8 +130,63 @@
     </div>
 </div>
 
-@functions {
-    
+@code{
+    IList<Item> items = new List<Item>
+{
+        new Item {
+            Source = "css/Images/DSCN0030.JPG",
+            Alt ="First Slide",
+            Caption = "Slide 1",
+            Header = "Slide 1 Header"
+        },
+        new Item {
+            Source = "css/Images/DSCN0031.JPG",
+            Alt ="Second Slide",
+            Caption = "Slide 2",
+            Header = "Slide 2 Header"
+        },
+        new Item {
+            Source = "css/Images/DSCN0032.JPG",
+            Alt ="Third Slide",
+            Caption = "Slide 3",
+            Header = "Slide 3 Header"
+        },
+                new Item {
+            Source = "css/Images/DSCN0032.JPG",
+            Alt ="Forth Slide",
+            Caption = "Slide 4",
+            Header = "Slide 4 Header"
+        },
+                        new Item {
+            Source = "css/Images/DSCN0068.JPG",
+            Alt ="Fifth Slide",
+            Caption = "Slide 5",
+            Header = "Slide 5 Header"
+        }
+    };
+
+    class Item
+    {
+        public string Source { get; set; }
+        public string Alt { get; set; }
+        public string Caption { get; set; }
+        public string Header { get; set; }
+    }
+}
+
+@*@functions {
+
+    blazorOpenModal(dialog)
+    {
+        if (!dialog.open)
+        {
+            dialog.showModal();
+        }
+    }
+}*@
+
+@*@functions {
+
     //bool firstRender = true;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -125,5 +196,5 @@
             await JsRuntime.InvokeAsync<object>("initializeCarousel");
             firstRender = false;
         }
-    }
+    }*@
 }
