--- a/Client/Pages/DiveLog/ViewDives.razor
+++ b/Client/Pages/DiveLog/ViewDives.razor
@@ -31,14 +31,10 @@ else
         tbt = tbt + div.BottomTime;
     }
     tbt = tbt / 60;
+
     <div class="row">
         <div class="col-sm-3 form-group">
-            <a class="btn btn-success" href="divelog/addeditdive/false/0" Id="tooltip2"><i class="oi oi-plus"></i></a>
-            <BSTooltip Target="tooltip2" Placement="Placement.Auto">Log New Dive</BSTooltip>
-
-
-            <BSButton Color="Color.Primary" @onclick="@onToggle">Log New Dive</BSButton>
-
+            <a class="btn btn-success" href="divelog/addeditdive/false/0" data-toggle="tooltip" data-placement="auto" title="Log New Dive"><i class="oi oi-plus"></i></a>
         </div>
         <div class="col-sm-3"><h5>Records Found @count</h5></div>
         <div class="col-sm-6 justify-content-end">
@@ -54,13 +50,11 @@ else
                     <table class="table table-condensed table-striped table-hover">
                         <thead>
                             <tr>
-                                @*<th class="lh-th"><div class="lh-th-bottomline"></div></th>*@
                                 <th class="lh-th"><div class="lh-th-bottomline"></div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline">Date &amp; Time</div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline">Depth</div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline">Bottom</div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline">Country</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Located</div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline">Location</div></th>
                                 <th class="lh-th"><div class="lh-th-bottomline"></div></th>
                             </tr>
@@ -68,20 +62,20 @@ else
                         <tbody class="rowlink" data-link="row">
                             @foreach (DiveView dive in dv)
                             {
-                                //var tt = "<span class='text-yellow'>Located in: </span>test<br /><span class='text-yellow'>Latitude: </span>here<br /><span class='text-yellow'>Longitude: </span>test<br /><span class='text-yellow'>What to see: </span>see<br />"
-                                ;
+                                var tt = $"Located in: {dive.Located}{System.Environment.NewLine}" +
+                                         $"Latitude: {dive.Latitude}{System.Environment.NewLine}" +
+                                         $"Longitude: {dive.Longitude}{System.Environment.NewLine}" +
+                                         $" What to see: {dive.WhatToSee}";
 
                                 <tr>
-                                    @*<td class="lh-td">@dive.DiverId</td>*@
                                     <td class="col-xs-1 lh-td">
-                                        <a class="text-primary oi oi-pencil" href="divelog/addeditdive/true/@dive.DiveLogId"></a>
+                                        <a class="btn btn-transparent" href="divelog/addeditdive/true/@dive.DiveLogId" data-toggle="tooltip" data-placement="auto" title="Edit Dive"><i class="oi oi-pencil"></i></a>                                       
                                     </td>
                                     <td class="lh-td">@dive.DiveDateTime</td>
                                     <td class="lh-td">@dive.Depth</td>
                                     <td class="lh-td">@dive.BottomTime</td>
                                     <td class="lh-td">@dive.Country</td>
-                                    <td class="lh-td">@dive.Located</td>
-                                    <td class="lh-td">@dive.Location</td>
+                                    <td class="lh-td" data-toggle="tooltip" data-placement="auto" title="@tt">@dive.Location</td>
                                     <td class="col-xs-1 lh-td">
                                         <a class="text-danger oi oi-delete" @onclick="@(() => Delete((int)dive.DiveLogId))"></a>
                                     </td>
@@ -96,20 +90,10 @@ else
 }
 @code {
     DiveView[] dv { get; set; }
-    //BSModal FullWidth { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         dv = await client.GetFromJsonAsync<DiveView[]>("api/dive");
-    }
-
-    BSModal VerticallyCentered;
-    //BSModal IgnoreClickOnBackDrop;
-    //BSModal IgnoreEscape;
-
-    void onToggle(MouseEventArgs e)
-    {
-        VerticallyCentered.Toggle();
     }
 
     async Task Delete(int diveId)
@@ -121,7 +105,5 @@ else
         //    await OnInitializedAsync();
         //}
     }
-
-
 }
 
