--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,13 +1,10 @@
 ﻿@page "/"
 @inject IJSRuntime JsRuntime;
 
-@*<button @onclick="OpenModal">Open</button>
-<dialog @ref="_element">My modal</dialog>*@
-
-<div class="scrollable-area-index">
+<div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <div class="well well-sm text-blue">
+            <div class="card text-blue">
                 <h4 class="alert-primary text-lg-center">Our Favorite Diving Locations</h4>
                 <ul>
                     <li>Honokohau Bay, Maui HI.</li>
@@ -31,47 +28,8 @@
                 <BSCarouselControl CarouselDirection="CarouselDirection.Next" NumberOfItems="@items.Count" />
             </BSCarousel>
         </div>
-        @*<div id="main" class="col-sm-4 carousel slide" data-ride="carousel">
-                <div id="slidshow"
-                     class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#slidshow" data-slide-to="0" class="active" />
-                        <li data-target="#slidshow" data-slide-to="1" />
-                        <li data-target="#slidshow" data-slide-to="2" />
-                        <li data-target="#slidshow" data-slide-to="3" />
-                        <li data-target="#slidshow" data-slide-to="4" />
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item  active">
-                            <img class="d-block w-100" src="css/Images/DSCN0030.JPG" alt="Pepa Pig">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="css/Images/DSCN0031.JPG" alt="Sponge Bob">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="css/Images/DSCN0032.JPG" alt="Sponge Bob">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="css/Images/DSCN0033.JPG" alt="Sponge Bob">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="css/Images/DSCN0068.JPG" alt="Sponge Bob">
-                        </div>
-                    </div>
-                    <a id="slidshow-prev"
-                       class="carousel-control-prev" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a id="slidshow-next"
-                       class="carousel-control-next" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>*@
         <div class="col-sm-4">
-            <div class="well well-sm text-blue">
+            <div class="card text-blue">
                 <h4 class="alert-primary text-lg-center">Getting started</h4>
 
                 If you have an account click Log in.
@@ -87,43 +45,46 @@
             </div>
         </div>
     </div>
+    <br />
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
-            <div class="well well-sm text-blue">
-                <h4 class="alert-primary text-lg-center">Diving Tips</h4>
-                <ul>
-                    <li>
-                        Drink lots of water and stay hydrated.
-                    </li>
-                    <li>
-                        Don't hold your breath! Just remember to keep breathing and try to relax.
-                    </li>
-                    <li>
-                        Scuba diving or breathing underwater can be a strange feeling at first but stick at it as it gets better with each dive.
-                    </li>
-                    <li>
-                        Try to relax and breathe slowly so you don't consume your air too quickly.
-                    </li>
-                    <li>
-                        Diving is not a race. Take it slow and steady this helps with your air consumption and you'll see more.
-                    </li>
-                    <li>
-                        Make sure you are comfortable with your dive buddy .
-                    </li>
-                    <li>
-                        Don't drink too much alcohol the night before your dive trip.
-                    </li>
-                    <li>
-                        There is nothing more relaxing than laying in sun or shade in between dives and reading, listening to music or just relaxing.
-                    </li>
-                    <li>
-                        If you buy a new mask you need to clean it out with toothpaste or defog it before using it for the first time.
-                    </li>
-                    <li class="danger">
-                        And most important! Remember not to fly for 24 hours after diving.
-                    </li>
-                </ul>
+            <div class="card text-blue">
+                <h4 class="card-title alert-primary text-lg-center">Diving Tips</h4>
+                <div class="card-body">
+                    <ul>
+                        <li>
+                            Drink lots of water and stay hydrated.
+                        </li>
+                        <li>
+                            Don't hold your breath! Just remember to keep breathing and try to relax.
+                        </li>
+                        <li>
+                            Scuba diving or breathing underwater can be a strange feeling at first but stick at it as it gets better with each dive.
+                        </li>
+                        <li>
+                            Try to relax and breathe slowly so you don't consume your air too quickly.
+                        </li>
+                        <li>
+                            Diving is not a race. Take it slow and steady this helps with your air consumption and you'll see more.
+                        </li>
+                        <li>
+                            Make sure you are comfortable with your dive buddy .
+                        </li>
+                        <li>
+                            Don't drink too much alcohol the night before your dive trip.
+                        </li>
+                        <li>
+                            There is nothing more relaxing than laying in sun or shade in between dives and reading, listening to music or just relaxing.
+                        </li>
+                        <li>
+                            If you buy a new mask you need to clean it out with toothpaste or defog it before using it for the first time.
+                        </li>
+                        <li class="danger">
+                            And most important! Remember not to fly for 24 hours after diving.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="col-sm-3"></div>
@@ -172,29 +133,4 @@
         public string Caption { get; set; }
         public string Header { get; set; }
     }
-}
-
-@*@functions {
-
-    blazorOpenModal(dialog)
-    {
-        if (!dialog.open)
-        {
-            dialog.showModal();
-        }
-    }
-}*@
-
-@*@functions {
-
-    //bool firstRender = true;
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await JsRuntime.InvokeAsync<object>("initializeCarousel");
-            firstRender = false;
-        }
-    }*@
 }
