--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,10 +1,14 @@
 ﻿@inherits LayoutComponentBase
 @inject IBootstrapCss BootstrapCss
 
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="sidebar">
+    <NavMenu />
+</div>
 
-    <div class="scrollable-main">
-        @Body
-    </div>
+<div class="scrollable-main">
+    @Body
+</div>
+<RadzenDialog />,
+<RadzenNotification />
+<RadzenContextMenu />
+<RadzenTooltip />
