--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -16,7 +16,7 @@
 @using TheDiveLog.Shared.Models.ImageTables
 @using TheDiveLog.Shared.Models.PADIDiveChartTables
 
-@using BlazorStrap
+@*@using BlazorStrap*@
 @using Mobsites.Blazor
 @using Radzen 
 @using Radzen.Blazor
