--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@inject IBootstrapCss BootstrapCss
+@*@inject IBootstrapCss BootstrapCss*@
 
 <div class="sidebar">
     <NavMenu />
