--- a/Client/Pages/DiveLog/ViewDives.razor
+++ b/Client/Pages/DiveLog/ViewDives.razor
@@ -1,92 +1,102 @@
 ﻿@page "/viewdives"
 @inject HttpClient client
 @inject IJSRuntime js
+
 @{
     string title = string.Empty;
     decimal tbt = 0;
 }
-@if (dv == null)
-{
-    title = "Loading...";
-}
-else if (dv.Length == 0)
-{
-    <div class="row">
-        <div class="col-sm-3 form-group">
-            <a class="btn btn-success" href="divelog/addeditdive/false/0" data-toggle="tooltip" data-placement="auto" title="Log New Dive"><i class="oi oi-plus"></i> Log New Dive</a>
-        </div>
-        <div class="col-sm-3"><h5>No Records Found.</h5></div>
-        <div class="col-sm-6 justify-content-end">
-            <h5>Total HR's Bottom Time: 0</h5>
-        </div>
-    </div>
-}
-else
-{
-    var count = dv.Count();
-
-    foreach (DiveView div in dv)
-    {
-        tbt = tbt + div.BottomTime;
-    }
-    tbt = tbt / 60;
-
-    <div class="row">
-        <div class="col-sm-3 form-group">
-            <a class="btn btn-success" href="divelog/addeditdive/false/0" data-toggle="tooltip" data-placement="auto" title="Log New Dive"><i class="oi oi-plus"></i></a>
-        </div>
-        <div class="col-sm-3"><h5>Records Found @count</h5></div>
-        <div class="col-sm-6 justify-content-end">
-            <h5>Total HR's Bottom Time: @tbt.ToString("N2")</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 table">
-            <div class="lh-table-container">
-                <div class="lh-header-container">
+<AuthorizeView>
+    <Authorized>
+        @if (dv == null)
+        {
+            title = "Loading...";
+        }
+        else if (dv.Length == 0)
+        {
+            <div class="row">
+                <div class="col-sm-3 form-group">
+                    <a class="btn btn-success" href="divelog/addeditdive/false/0" data-toggle="tooltip" data-placement="auto" title="Log New Dive"><i class="oi oi-plus"></i> Log New Dive</a>
                 </div>
-                <div class="lh-table-container-inner">
-                    <table class="table table-condensed table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th class="lh-th"><div class="lh-th-bottomline"></div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Date &amp; Time</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Depth</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Bottom</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Country</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline">Location</div></th>
-                                <th class="lh-th"><div class="lh-th-bottomline"></div></th>
-                            </tr>
-                        </thead>
-                        <tbody class="rowlink" data-link="row">
-                            @foreach (DiveView dive in dv)
-                            {
-                                var tt = $"Located in: {dive.Located}{System.Environment.NewLine}" +
-                                         $"Latitude: {dive.Latitude}{System.Environment.NewLine}" +
-                                         $"Longitude: {dive.Longitude}{System.Environment.NewLine}" +
-                                         $" What to see: {dive.WhatToSee}";
-
-                                <tr>
-                                    <td class="col-xs-1 lh-td">
-                                        <a class="btn btn-transparent text-primary" href="divelog/addeditdive/true/@dive.DiveLogId" data-toggle="tooltip" data-placement="auto" title="Edit Dive"><i class="oi oi-pencil"></i></a>                                       
-                                    </td>
-                                    <td class="lh-td">@dive.DiveDateTime</td>
-                                    <td class="lh-td">@dive.Depth</td>
-                                    <td class="lh-td">@dive.BottomTime</td>
-                                    <td class="lh-td">@dive.Country</td>
-                                    <td class="lh-td" data-toggle="tooltip" data-placement="auto" title="@tt">@dive.Location</td>
-                                    <td class="col-xs-1 lh-td">
-                                        <a class="text-danger oi oi-delete" @onclick="@(() => Delete((int)dive.DiveLogId))"></a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                <div class="col-sm-3"><h5>No Records Found.</h5></div>
+                <div class="col-sm-6 justify-content-end">
+                    <h5>Total HR's Bottom Time: 0</h5>
                 </div>
             </div>
-        </div>
-    </div>
-}
+        }
+        else
+        {
+            var count = dv.Count();
+
+            foreach (DiveView div in dv)
+            {
+                tbt = tbt + div.BottomTime;
+            }
+            tbt = tbt / 60;
+
+            <div class="row">
+                <div class="col-sm-3 form-group">
+                    <a class="btn btn-success" href="divelog/addeditdive/false/0" data-toggle="tooltip" data-placement="auto" title="Log New Dive"><i class="oi oi-plus"></i></a>
+                </div>
+                <div class="col-sm-3"><h5>Records Found @count</h5></div>
+                <div class="col-sm-6 justify-content-end">
+                    <h5>Total HR's Bottom Time: @tbt.ToString("N2")</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 table">
+                    <div class="lh-table-container">
+                        <div class="lh-header-container">
+                        </div>
+                        <div class="lh-table-container-inner">
+                            <table class="table table-condensed table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="lh-th"><div class="lh-th-bottomline"></div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline">Date &amp; Time</div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline">Depth</div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline">Bottom</div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline">Country</div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline">Location</div></th>
+                                        <th class="lh-th"><div class="lh-th-bottomline"></div></th>
+                                    </tr>
+                                </thead>
+                                <tbody class="rowlink" data-link="row">
+                                    @foreach (DiveView dive in dv)
+                                    {
+                                        var tt = $"Located in: {dive.Located}{System.Environment.NewLine}" +
+                                                 $"Latitude: {dive.Latitude}{System.Environment.NewLine}" +
+                                                 $"Longitude: {dive.Longitude}{System.Environment.NewLine}" +
+                                                 $" What to see: {dive.WhatToSee}";
+
+                                        <tr>
+                                            <td class="col-xs-1 lh-td">
+                                                <a class="btn btn-transparent text-primary" href="divelog/addeditdive/true/@dive.DiveLogId" data-toggle="tooltip" data-placement="auto" title="Edit Dive"><i class="oi oi-pencil"></i></a>
+                                            </td>
+                                            <td class="lh-td">@dive.DiveDateTime</td>
+                                            <td class="lh-td">@dive.Depth</td>
+                                            <td class="lh-td">@dive.BottomTime</td>
+                                            <td class="lh-td">@dive.Country</td>
+                                            <td class="lh-td" data-toggle="tooltip" data-placement="auto" title="@tt">@dive.Location</td>
+                                            <td class="col-xs-1 lh-td">
+                                                <a class="text-danger oi oi-delete" @onclick="@(() => Delete((int)dive.DiveLogId))"></a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </Authorized>
+    <NotAuthorized>
+        <h1>Authentication Failure!</h1>
+        <p>You're not signed in.</p>
+    </NotAuthorized>
+</AuthorizeView>
+
 @code {
     DiveView[] dv { get; set; }
 
