--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -8,7 +8,8 @@
 <div class="scrollable-main">
     @Body
 </div>
-<RadzenDialog />,
+
+<RadzenDialog />
 <RadzenNotification />
 <RadzenContextMenu />
 <RadzenTooltip />
