--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager Navigation
+﻿@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
 
 <div class="top-row pl-4 navbar navbar-dark">
@@ -10,7 +11,8 @@
 </div>
 <AuthorizeView>
     <Authorized>
-        @{ 
+        @{
+            AppState.UserId = _userId;
             AppState.User = context.User.Identity.Name;
             AppState.IsAuthenticated = true;
         }
@@ -62,7 +64,8 @@
         </div>
     </Authorized>
     <NotAuthorized>
-        @{ 
+        @{
+            AppState.UserId = _userId;
             AppState.User = string.Empty;
             AppState.IsAuthenticated = false;
         }
@@ -87,8 +90,25 @@
 
 @code {
     private bool collapseNavMenu = true;
-
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string _userId;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await GetClaimsPrincipalData();
+        await base.OnParametersSetAsync();
+    }
+
+    private async Task GetClaimsPrincipalData()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (user.Identity.IsAuthenticated)
+        {
+            _userId = user.FindFirst(c => c.Type == "sub")?.Value;
+        }
+    }
 
     private void ToggleNavMenu()
     {
