--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -40,7 +40,7 @@
                         </NavLink>
                     </li>
                     <li class="nav-item px-2">
-                        <NavLink class="nav-link" href="plandives">
+                        <NavLink class="nav-link" href="diveplanning">
                             <span class="oi oi-plus" aria-hidden="true"></span> Planning
                         </NavLink>
                     </li>
@@ -50,7 +50,7 @@
                         </NavLink>
                     </li>
                     <li class="nav-item px-2">
-                        <NavLink class="nav-link" href="divecharts">
+                        <NavLink class="nav-link" href="viewdivecharts">
                             <span class="oi oi-list" aria-hidden="true"></span> Dive Charts
                         </NavLink>
                     </li>
